// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Default Tag 1`] = `
<strong
  className="ola_tag is-small"
>
  Test
</strong>
`;

exports[`Tag with error variant 1`] = `
<strong
  className="ola_tag is-error is-small"
>
  Test
</strong>
`;

exports[`Tag with extraClass 1`] = `
<strong
  className="ola_tag is-small test"
>
  Test
</strong>
`;

exports[`Tag with invert variant 1`] = `
<strong
  className="ola_tag is-invert is-small"
>
  Test
</strong>
`;

exports[`Tag with pro variant 1`] = `
<strong
  className="ola_tag is-pro is-small"
>
  Test
</strong>
`;

exports[`Tag with success variant 1`] = `
<strong
  className="ola_tag is-success is-small"
>
  Test
</strong>
`;

exports[`Tag with warning variant 1`] = `
<strong
  className="ola_tag is-warning is-small"
>
  Test
</strong>
`;
